--- a/ventaapp/Views/Shared/_Layout.cshtml
+++ b/ventaapp/Views/Shared/_Layout.cshtml
@@ -67,7 +67,7 @@
 
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="bi bi-box-seam"></i> Configuracion
+                            <i class="bi bi-gear"></i> Configuracion
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" asp-controller="Productos" asp-action="Index">
