--- a/ventaapp/Views/Home/Index.cshtml
+++ b/ventaapp/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p> <h5> Pagina Principal en mantenimiento, Proximamente disponible</h5> </p>
 </div>
